<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <!--android:background="@drawable/splash"-->

    <RelativeLayout
        android:padding="12dp"
        android:id="@+id/rl_user_head_avatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/user_head_avatar"
            android:layout_width="55dip"
            android:layout_height="55dip"
            android:background="?attr/colorPrimary"
            android:scaleType="fitXY"
            android:src="@mipmap/default_avatar"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@drawable/abc_list_pressed_holo_dark"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:background="@drawable/mm_listitem"

        android:gravity="center_vertical" >
        <TextView
            android:text="@string/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            />

        <TextView
            android:textColor="?attr/colorPrimary"
            android:layout_alignParentRight="true"
            android:paddingRight="20dip"
            android:id="@+id/user_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@drawable/abc_list_pressed_holo_dark"
        />

    <RelativeLayout
        android:id="@+id/rl_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/mm_listitem"
        android:padding="10dip"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:text="@string/nickname"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/user_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:paddingRight="20dip"
            android:layout_centerVertical="true"
            android:text="abc"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/ic_right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/right_arrow_icon" />
    </RelativeLayout>

    <Button
        android:id="@+id/add_friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_friend"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/send_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/send_msg"
        android:visibility="gone"
        />
</LinearLayout>
