<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="10dip"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dip"
                    android:gravity="bottom|left"
                    android:paddingLeft="10dip"
                    android:text="@string/notify"
                    android:textColor="?attr/colorPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:background="@color/btn_gray_normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rl_switch_notification"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"
                    android:padding="10dip">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="10dip"
                        android:text="@string/newnotify"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:typeface="serif" />

                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/switch_notification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/textview1"
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:background="#E6E6E6" />

                <RelativeLayout
                    android:id="@+id/rl_switch_sound"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"
                    android:padding="10dip">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="10dip"
                        android:text="@string/voice"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:typeface="serif" />

                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/switch_sound"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/textview2"
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:background="#E6E6E6" />

                <RelativeLayout
                    android:id="@+id/rl_switch_vibrate"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"

                    android:padding="10dip">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="10dip"
                        android:text="@string/shake"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:typeface="serif" />

                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/switch_vibrate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="10dip"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dip"
                        android:gravity="bottom|left"
                        android:paddingLeft="10dip"
                        android:text="@string/chatset"
                        android:textColor="?attr/colorPrimary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dip"
                        android:background="@color/btn_gray_normal" />
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/rl_switch_speaker"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"
                    android:padding="10dip">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="10dip"
                        android:text="@string/yangshengqi"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:typeface="serif" />

                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/switch_speaker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/btn_gray_normal" />

                <LinearLayout
                    android:id="@+id/ll_black_list"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"

                    android:padding="10dip">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="10dip"
                        android:text="@string/book_black"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="10dip"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dip"
                        android:gravity="bottom|left"
                        android:paddingLeft="10dip"
                        android:text="@string/other"
                        android:textColor="?attr/colorPrimary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dip"
                        android:background="@color/btn_gray_normal" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/ll_user_profile"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"

                    android:padding="10dip">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="10dip"
                        android:text="@string/title_user_profile"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/btn_gray_normal" />

                <RelativeLayout
                    android:id="@+id/rl_switch_theme_color"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"
                    android:padding="10dip">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="10dip"
                        android:text="@string/switch_themecolor"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <View
                        android:id="@+id/theme_color"
                        android:layout_width="80dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/btn_gray_normal" />

                <LinearLayout
                    android:id="@+id/ll_diagnose"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"
                    android:padding="10dip">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="10dip"
                        android:text="@string/diagnose"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/btn_gray_normal" />

                <LinearLayout
                    android:id="@+id/check_new_version"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"
                    android:padding="10dip">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="10dip"
                        android:text="@string/check_new_version"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/btn_gray_normal" />

                <LinearLayout
                    android:id="@+id/ll_set_push_nick"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"
                    android:padding="10dip"

                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="10dip"
                        android:text="@string/push_nick"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/btn_gray_normal" />
            </LinearLayout>

            <TextView
                android:id="@+id/textview4"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="#E6E6E6" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_logout"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="12dp"
                    android:text="@string/button_logout" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>